# Yolov8_CPP_Inference_tflite

./: CMakeLists.txt  README.md  main.cpp
